--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -2,7 +2,6 @@
     &__chat{
         height: 80%;
         font-weight: 300;
-        font-size: 0.8rem;
         display: flex;
         flex-direction: column;
         font-size: 0.6rem;
@@ -11,7 +10,7 @@
             color: $moderateViolet;
             background-color: hsl(283, 20%, 93%);
             max-width: 50%;
-            margin : 1rem 0 0 0.5rem;
+            margin : 0.5rem 0 0 0.5rem;
             padding: 0.5rem;
             border-radius: 10px 10px 10px 3px;
             
@@ -34,10 +33,14 @@
             color: $desaturatedDarkViolet;
             background-color: $white;
             max-width: 50%;
-            margin : 1rem 0.5rem 1rem 0;
+            margin : 0.5rem 0.5rem 0 0;
             align-self: flex-end;
             padding: 0.5rem;
             border-radius: 10px 10px 5px 10px;
+        }
+
+        .clientBubble:first-of-type{
+            border: 2px red solid;
         }
 
         &__price{
