--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -2,7 +2,7 @@
 padding: 1rem 2rem;
 text-align: center;
 height: auto;
-margin-bottom: 10rem;
+margin-bottom: 2rem;
 
     &__title{
         color: $veryDarkDesaturatedViolet;
